# catsim

./: .gitattributes  .gitignore  README.md  catwise_S21_probably.npy  pyproject.toml
docs/: RACS_JAX_USAGE_GUIDE.md
scripts/: 4dtree.py  batch_catsim.py  compare_error.py  conf_noise.py  count_dist.py  coverage_transform.py  load_low3.py  precompute_data.py  run_catwise_jax_batch.py  run_racs_jax_batch.py  run_racs_mid1_jax_minimal.py  test_catsim.py  test_kd_dist_sample.py  test_racs.py  tmp_helpers.py  vmf_cluster.py
src/catsim/: __init__.py  configs.py  racs.py  racs_jax.py  racs_products.py  simulator.py  simulator_jax.py
src/catsim/data/0p5_17p0/colour_mag/: multinomial_sampler_data.pkl
src/catsim/data/0p5_17p0/coverage_map/: w1_coverage_map_unmasked.npy  w2_coverage_map_unmasked.npy
src/catsim/data/0p5_17p0/mag_coverage/: w1w2_magcov_hashgrid.npz  w1w2_magcov_hashgrid_no_eclmask.npz
src/catsim/data/mask/: README.txt  S22_CatWISE_Mask_nside64.npy
src/catsim/data/racs_low3/: racs-low3_mask_nside64_ring.npy
src/catsim/utils/: batch_simulate.py  constants.py  hashgrid.py  healsphere.py  hists.py  package_data.py  physics.py  plotting.py  rng.py  spec_idx.py  weather.py
tests/: test_catwise_jax.py  test_hashgrid.py  test_racs_jax.py  test_racs_unit.py
