[project]
name = "catsim"
version = "0.1.0"
description = "Simulate CatWISE datasets"
authors = [
    {name = "Oliver Oayda",email = "oliver.oayda@sydney.edu.au"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy (>=7.1.1,<8.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "healpy (>=1.18.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "dill (>=0.4.0,<0.5.0)",
    "ipython (>=9.7.0,<10.0.0)",
]
packages = [
  { "include" = "catsim", "from" = "src" }
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
